--- a/package.xml
+++ b/package.xml
@@ -13,6 +13,7 @@
     <build_depend>visualization_msgs</build_depend>
     <build_depend>tf</build_depend>
     <build_depend>pluginlib</build_depend>
+    <build_depend>roboy_communication_middleware</build_depend>
 
     <run_depend>roscpp</run_depend>
     <run_depend>std_msgs</run_depend>
@@ -21,6 +22,7 @@
     <run_depend>tf</run_depend>
     <run_depend>rviz</run_depend>
     <run_depend>pluginlib</run_depend>
+    <run_depend>roboy_communication_middleware</run_depend>
 
     <export>
         <rviz plugin="${prefix}/darkroom.xml"/>
