--- a/package.xml
+++ b/package.xml
@@ -14,6 +14,7 @@
     <build_depend>tf</build_depend>
     <build_depend>pluginlib</build_depend>
     <build_depend>roboy_communication_middleware</build_depend>
+    <build_depend>common_utilities</build_depend>
 
     <run_depend>roscpp</run_depend>
     <run_depend>std_msgs</run_depend>
@@ -23,6 +24,7 @@
     <run_depend>rviz</run_depend>
     <run_depend>pluginlib</run_depend>
     <run_depend>roboy_communication_middleware</run_depend>
+    <run_depend>common_utilities</run_depend>
 
     <export>
         <rviz plugin="${prefix}/darkroom.xml"/>
