--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "mavmap"]
-	path = mavmap
+[submodule "include/darkroom/mavmap"]
+	path = include/darkroom/mavmap
 	url = https://github.com/mavmap/mavmap
