--- a/package.xml
+++ b/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<package>
+<package format="2">
     <name>darkroom</name>
     <version>0.0.0</version>
     <description>The darkroom package for HTC vive lighthouse tracking</description>
@@ -7,24 +7,15 @@
     <license>BSD</license>
 
     <buildtool_depend>catkin</buildtool_depend>
-    <build_depend>roscpp</build_depend>
-    <build_depend>std_msgs</build_depend>
-    <build_depend>rviz</build_depend>
-    <build_depend>visualization_msgs</build_depend>
-    <build_depend>tf</build_depend>
-    <build_depend>pluginlib</build_depend>
-    <build_depend>roboy_communication_middleware</build_depend>
-    <build_depend>common_utilities</build_depend>
-
-    <run_depend>roscpp</run_depend>
-    <run_depend>std_msgs</run_depend>
-    <run_depend>message_runtime</run_depend>
-    <run_depend>visualization_msgs</run_depend>
-    <run_depend>tf</run_depend>
-    <run_depend>rviz</run_depend>
-    <run_depend>pluginlib</run_depend>
-    <run_depend>roboy_communication_middleware</run_depend>
-    <run_depend>common_utilities</run_depend>
+    <depend>roscpp</depend>
+    <depend>std_msgs</depend>
+    <depend>rviz</depend>
+    <depend>visualization_msgs</depend>
+    <depend>tf</depend>
+    <depend>pluginlib</depend>
+    <depend>roboy_communication_middleware</depend>
+    <depend>common_utilities</depend>
+    <depend>message_runtime</depend>
 
     <export>
         <rviz plugin="${prefix}/darkroom.xml"/>
