depend on common utilities libs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,7 +39,7 @@ include_directories(${CMAKE_CURRENT_BINARY_DIR})
 
 catkin_package(CATKIN_DEPENDS message_runtime roboy_communication_middleware common_utilities INCLUDE_DIRS include
         LIBRARIES ParticleFilter PoseEstimatorSensorCloud PoseEstimatorSensorDistance PoseEstimatorSensorDistances
-        Transform Triangulate LighthouseEstimator Sensor TrackedObject darkroom)
+        Transform Triangulate LighthouseEstimator Sensor TrackedObject darkroom rviz_visualization UDPSocket)
 
 include_directories(
 		include/
@@ -71,7 +71,7 @@ target_link_libraries( Triangulate ${catkin_LIBRARIES} )
 
 add_library( LighthouseEstimator src/LighthouseEstimator.cpp  include/darkroom/mavmap/src/base3d/projection.cc
         include/darkroom/epnp/epnp.cpp include/darkroom/mavmap/src/base3d/p3p.cc include/darkroom/mavmap/src/util/math.cc)
-add_dependencies(LighthouseEstimator roboy_communication_simulation_gencpp)
+add_dependencies(LighthouseEstimator roboy_communication_simulation_gencpp )
 target_link_libraries( LighthouseEstimator ${catkin_LIBRARIES} PoseEstimatorSensorCloud PoseEstimatorSensorDistance
 		PoseEstimatorSensorDistances rviz_visualization Transform Triangulate)
 
@@ -79,7 +79,7 @@ add_library( Sensor src/Sensor.cpp )
 target_link_libraries( Sensor ${catkin_LIBRARIES} )
 
 add_library( TrackedObject src/TrackedObject.cpp )
-add_dependencies(TrackedObject roboy_communication_simulation_gencpp)
+add_dependencies(TrackedObject roboy_communication_simulation_gencpp )
 target_link_libraries( TrackedObject ${yaml-cpp_LIBRARIES} ${catkin_LIBRARIES} ${OpenCV_LIBS}
 		Sensor LighthouseEstimator UDPSocket)
 
