it seems one should not explicitly include the link to a ros package lib

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,7 +73,7 @@ add_library( LighthouseEstimator src/LighthouseEstimator.cpp  include/darkroom/m
         include/darkroom/epnp/epnp.cpp include/darkroom/mavmap/src/base3d/p3p.cc include/darkroom/mavmap/src/util/math.cc)
 add_dependencies(LighthouseEstimator roboy_communication_middleware_gencpp )
 target_link_libraries( LighthouseEstimator ${catkin_LIBRARIES} PoseEstimatorSensorCloud PoseEstimatorSensorDistance
-		PoseEstimatorSensorDistances rviz_visualization Transform Triangulate)
+		PoseEstimatorSensorDistances Transform Triangulate)
 
 add_library( Sensor src/Sensor.cpp )
 target_link_libraries( Sensor ${catkin_LIBRARIES} )
@@ -81,11 +81,11 @@ target_link_libraries( Sensor ${catkin_LIBRARIES} )
 add_library( TrackedObject src/TrackedObject.cpp )
 add_dependencies(TrackedObject roboy_communication_middleware_gencpp )
 target_link_libraries( TrackedObject ${yaml-cpp_LIBRARIES} ${catkin_LIBRARIES} ${OpenCV_LIBS}
-		Sensor LighthouseEstimator UDPSocket)
+		Sensor LighthouseEstimator )
 
 qt5_wrap_cpp(MOC_FILES include/darkroom/DarkRoom.hpp include/darkroom/TrackedObjectDelegate.hpp)
 add_library( darkroom src/DarkRoom.cpp src/TrackedObjectDelegate.cpp ${MOC_FILES})
-target_link_libraries( darkroom ${QT_LIBRARIES} ${catkin_LIBRARIES} TrackedObject rviz_visualization)
+target_link_libraries( darkroom ${QT_LIBRARIES} ${catkin_LIBRARIES} TrackedObject )
 
 #==============================================================================
 # Installation
